--- a/.github/workflows/staging_ticketmaster_fetch.yml
+++ b/.github/workflows/staging_ticketmaster_fetch.yml
@@ -14,6 +14,7 @@ jobs:
       SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      DB_URL: ${{ secrets.DB_URL }}
 
     steps:
       - name: Checkout repository
