--- a/.github/workflows/meetup_photo-downloader.yml
+++ b/.github/workflows/meetup_photo-downloader.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        worker_id: [1, 2, 3, 4] # scale out here
+        worker_id: [1, 2, 3, 4, 5, 6, 7, 8] # scale out here
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -39,4 +39,4 @@ jobs:
           AWS_BUCKET: ${{ secrets.AWS_BUCKET }}
         run: >
           python staging_meetup_photo_downloader/photo_downloader.py
-          --limit 100
+          --limit 800
