--- a/.github/workflows/sync-ticketmaster.yml
+++ b/.github/workflows/sync-ticketmaster.yml
@@ -1,9 +1,13 @@
 name: Sync Ticketmaster Images
 
 on:
-  workflow_dispatch:      # manual trigger
+  workflow_dispatch:
   schedule:
-    - cron: "*/15 * * * *"   # runs every 15 minutes (change if needed)
+    - cron: "*/15 * * * *" # every 15 minutes
+
+concurrency:
+  group: ticketmaster-image-sync
+  cancel-in-progress: false
 
 jobs:
   sync:
@@ -18,18 +22,17 @@ jobs:
       PYTHONUNBUFFERED: "1"
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install boto3 psycopg2-binary requests python-dotenv
 
-      - name: Run sync script
-        run: python ticketmaster_image_downloader.py --skip-exists
+      - name: Run Ticketmaster Image Sync
+        run: |
+          python ticketmaster_image_downloader.py
