Add cron schedule for 14:00 UTC trigger
Added a new cron schedule to trigger the workflow at 14:00 UTC.

--- a/.github/workflows/staging_ticketmaster_fetch.yml
+++ b/.github/workflows/staging_ticketmaster_fetch.yml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:      # manual trigger
   schedule:
     - cron: "0 2 * * *"  # daily at 02:00 UTC
+    - cron: "0 14 * * *"  # 14:00 UTC
 
 jobs:
   load_ticketmaster:
