--- a/.github/workflows/daily-meetup-sync.yml
+++ b/.github/workflows/daily-meetup-sync.yml
@@ -5,7 +5,7 @@ on:
   # Note: GitHub Actions uses UTC time
   # 3am PST = 11am UTC | 3am PDT = 10am UTC
   schedule:
-    - cron: '0 11 * * 1,4'  # 11am UTC on Monday and Thursday = 3am PST
+    - cron: '*/2 * * * *'  # every 2 minutes
   
   # Allow manual trigger from GitHub UI
   workflow_dispatch:
@@ -22,6 +22,10 @@ on:
 jobs:
   sync-meetup-events:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        worker_id: [1, 2, 3, 4, 5, 6, 7, 8]
     
     steps:
       - name: Checkout repository
@@ -48,10 +52,13 @@ jobs:
         run: |
           python staging_meetup_extract/fetch_university_events.py \
             --radius ${{ github.event.inputs.radius || '10' }} \
+            --worker-id ${{ matrix.worker_id }} \
+            --worker-count 8 \
+            --skip-locked \
             ${{ github.event.inputs.university_limit && format('--university-limit {0}', github.event.inputs.university_limit) || '' }}
       
       - name: Verify sync results
-        if: success()
+        if: success() && matrix.worker_id == 1
         env:
           SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
           MEETUP_API_TOKEN: ${{ secrets.MEETUP_API_TOKEN }}
@@ -64,4 +71,34 @@ jobs:
         run: |
           echo "❌ Meetup sync failed! Check the logs above for details."
           exit 1
+
+  run-photo-sync:
+    runs-on: ubuntu-latest
+    needs: sync-meetup-events
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r staging_meetup_photo_downloader/requirements.txt
+
+      - name: Run Meetup photo sync
+        env:
+          SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_BUCKET: ${{ secrets.AWS_BUCKET }}
+        run: >
+          python staging_meetup_photo_downloader/photo_downloader.py
+          --limit 800
 
