--- a/.github/workflows/meetup_photo-downloader.yml
+++ b/.github/workflows/meetup_photo-downloader.yml
@@ -12,25 +12,69 @@ concurrency:
 jobs:
   run-photo-sync:
     runs-on: ubuntu-latest
+    env:
+      DAILY_SYNC_LOOKBACK_MINUTES: 15
     strategy:
       fail-fast: false
       matrix:
         worker_id: [1, 2, 3, 4, 5, 6, 7, 8] # scale out here
     steps:
+      - name: Check recent daily sync run
+        id: daily_sync_check
+        uses: actions/github-script@v7
+        with:
+          script: |
+            if (context.eventName === "workflow_dispatch") {
+              core.setOutput("should_run", "true");
+              return;
+            }
+
+            const lookbackMinutes = parseInt(
+              process.env.DAILY_SYNC_LOOKBACK_MINUTES || "15",
+              10
+            );
+            const { owner, repo } = context.repo;
+            const workflow_id = "daily-meetup-sync.yml";
+            const runs = await github.rest.actions.listWorkflowRuns({
+              owner,
+              repo,
+              workflow_id,
+              per_page: 1
+            });
+            const latest = runs.data.workflow_runs[0];
+            if (!latest) {
+              core.setOutput("should_run", "true");
+              return;
+            }
+            const startedAt = latest.run_started_at || latest.created_at;
+            const ageMinutes = (Date.now() - new Date(startedAt).getTime()) / 60000;
+            core.info(
+              `Latest daily sync started ${ageMinutes.toFixed(1)} minutes ago ` +
+              `(status=${latest.status}, conclusion=${latest.conclusion})`
+            );
+            core.setOutput(
+              "should_run",
+              ageMinutes <= lookbackMinutes ? "false" : "true"
+            );
+
       - name: Checkout repository
+        if: steps.daily_sync_check.outputs.should_run == 'true'
         uses: actions/checkout@v4
 
       - name: Set up Python
+        if: steps.daily_sync_check.outputs.should_run == 'true'
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
       - name: Install dependencies
+        if: steps.daily_sync_check.outputs.should_run == 'true'
         run: |
           python -m pip install --upgrade pip
           pip install -r staging_meetup_photo_downloader/requirements.txt
 
       - name: Run worker
+        if: steps.daily_sync_check.outputs.should_run == 'true'
         env:
           SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
