--- a/.github/workflows/daily-meetup-sync.yml
+++ b/.github/workflows/daily-meetup-sync.yml
@@ -5,7 +5,7 @@ on:
   # Note: GitHub Actions uses UTC time
   # 3am PST = 11am UTC | 3am PDT = 10am UTC
   schedule:
-    - cron: '*/2 * * * *'  # every 2 minutes
+    - cron: '*/5 * * * *'  # every 5 minutes
   
   # Allow manual trigger from GitHub UI
   workflow_dispatch:
@@ -22,6 +22,9 @@ on:
 jobs:
   sync-meetup-events:
     runs-on: ubuntu-latest
+    concurrency:
+      group: daily-meetup-sync
+      cancel-in-progress: true
     strategy:
       fail-fast: false
       matrix:
